CSS style nits, cover_graph.js computes the graph on the fly now, fixed issue with links between ancestors and descendants not showing
- Instead of using the output of parse_cover_graph.py, cover_graph.js makes an API call on the fly to grab the nodes and edges needed, so we won't need cover_graph.json or parse_cover_graph.py anymore
- "Connected component" meant all direct ancestors and descendants earlier, but it didn't include edges between, say A and C in the graph A->B->C if we searched for B
- Changed a bunch of id's to classes and fixed other css style issues

Test Plan: Looks fine locally

--- a/webapps/dashboards/static/css/cover_graph.css
+++ b/webapps/dashboards/static/css/cover_graph.css
@@ -1,76 +1,74 @@
 body {
-  background-color: #eee;
+    background-color: #eee;
 }
 
 #chart {
-  margin-top:5px;
-  background-color: white;
+    background-color: white;
+    margin-top: 5px;
 }
 
 svg {
-  cursor: move;
+    cursor: move;
 }
 
-#graph-nav {
-  margin-top:45px;
-  height: 10%;
-  padding: 1px;
-}
-
-.node rect {
+.graph-nav {
+    height: 10%;
+    margin-top: 45px;
+    padding: 1px;
 }
 
 .node text {
-  font: 300 20px "Helvetica Neue";
-}
-
-.link:hover {
-  cursor: auto;
+    font: 300 20px "Helvetica Neue";
 }
 
 .node:hover {
-  cursor: pointer;
-  opacity: 0.2;
+    cursor: pointer;
+    opacity: 0.2;
 }
 
-path.link {
-  fill: none;
-  stroke: #666;
-  stroke-width: 1.5px;
+.link {
+    fill: none;
+    stroke: #666;
+    stroke-width: 1.5px;
 }
 
-
-#search {
-  padding: 1px;
-  width: 97%;
-  margin-left: 0.25%;
-}
-
-#home {
-  background-color: #ddd;
-  padding: 3px;
-  padding-left: 6px;
-  float:right;
-  width: 1.26%;
-  margin-right: 0.25%;
-  text-align: center
-}
-
-#home:active {
-  background-color: #ccc;
+.link:hover {
+    cursor: auto;
 }
 
 
-#warning {
-  width:800px;
-  position:absolute;
-  left:50%;
-  top:50%;
-  margin:0px 0 0 -400px;
-  text-align: center;
-  font-style: italic;
-  font: "Helvetica";
-  display: none;
-  font-size: 50px;
-  opacity: 0.1;
+.search {
+    width: 96%;
+    margin-left: 0.25%;
+}
+
+.home {
+    background-color: #ddd;
+    font-size: 100;
+    float: right;
+    margin-right: 0.25%;
+    padding-left: 0.2%;
+    padding-top: 0.32%;
+    padding-bottom: 0.32%;
+    padding-right: 0.2%;
+    text-align: center;
+    width: 1.8%;
+}
+
+.home:active {
+    background-color: #ccc;
+}
+
+.warning {
+    display: none;
+    font: "Helvetica";
+    font-size: 50px;
+    font-style: italic;
+    left: 50%;
+    margin: 0 0 0 -400px;
+    opacity: 0.1;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 800px;
 }
